margin fixes to match homepage at mobile width, spacing in navbar to match zeplin

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -19,6 +19,12 @@
   flex-grow: 1;
 }
 @media screen and (max-width: 640px) {
+  .container p {
+    padding: 0 2rem;
+    }
+    .privacy-policy p {
+      padding: 0;
+    }
   .hero-section {
     flex-wrap: wrap;
   }
